<resources>
    <string name="app_name">Speech Recognizer</string>
    <string name="from">From :</string>
    <string name="to">To :  </string>
    <string name="tap">Tap on mic to speak</string>
    <string name="microphone">microphone</string>
    <string name="emptystr" />
    <string name="TranslatedText">Translated Text : </string>
    <string name="RecordedText">Recorded Text : </string>
    <string name="play">Listen</string>
</resources>
